--- a/app/src/main/res/layout/activity_request_list.xml
+++ b/app/src/main/res/layout/activity_request_list.xml
@@ -39,7 +39,7 @@
                 android:layout_height="match_parent"
                 android:text="받은 미팅"
                 android:textSize="15dp"
-                android:textColor="@color/colorPoint"
+                android:textColor="@color/colorNonselect"
                 android:gravity="center_vertical|center_horizontal"
                 android:layout_weight="5"
                 android:background="?android:selectableItemBackgroundBorderless"/>
@@ -54,7 +54,7 @@
                 android:layout_weight="5"
                 android:background="?android:selectableItemBackgroundBorderless"/>
         </LinearLayout>
-        <LinearLayout
+        <!--LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -93,7 +93,13 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="58dp">
             </android.support.v4.view.ViewPager>
-        </LinearLayout>
+        </LinearLayout-->
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+        </android.support.v4.view.ViewPager>
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
