--- a/app/src/main/res/layout/fragment_meeting_card.xml
+++ b/app/src/main/res/layout/fragment_meeting_card.xml
@@ -27,6 +27,7 @@
         android:orientation="horizontal"
         android:visibility="invisible">
         <Button
+            android:id="@+id/btn_left"
             android:layout_width="138dp"
             android:layout_height="48dp"
             android:background="@drawable/state_pressed_orange3"
@@ -35,6 +36,7 @@
             android:gravity="center"
             android:textSize="14dp" />
         <Button
+            android:id="@+id/btn_right"
             android:layout_width="138dp"
             android:layout_height="48dp"
             android:background="@drawable/state_pressed_orange4"
