--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:text="친구들과 안전한 미팅하세요! "
                 android:textSize="12dp"
-                android:textColor="#C6C6C6"
+                android:textColor="@color/colorNonselect"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="6.6dp"/>
         </LinearLayout>
@@ -231,7 +231,7 @@
                     android:layout_weight="48"
                     android:background="@drawable/state_pressed_gray"
                     android:text="대학생"
-                    android:textColor="#C6C6C6"
+                    android:textColor="@color/colorNonselect"
                     android:textSize="12dp"
                     style="?android:attr/borderlessButtonStyle"
                     />
@@ -246,7 +246,7 @@
                     android:layout_weight="48"
                     android:background="@drawable/state_pressed_gray"
                     android:text="직장인"
-                    android:textColor="#C6C6C6"
+                    android:textColor="@color/colorNonselect"
                     android:textSize="12dp"
                     style="?android:attr/borderlessButtonStyle"
                     />
