--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -57,15 +57,15 @@
             app:company="연세대학교"
             app:department="전기전자공학부">
         </com.yamigu.yamigu_app.CustomLayout.ProfileCard>
-        <com.yamigu.yamigu_app.Activity.InviteFriends
+        <com.yamigu.yamigu_app.CustomLayout.InviteFriends
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="33dp"
             app:code="q7tik3">
-        </com.yamigu.yamigu_app.Activity.InviteFriends>
+        </com.yamigu.yamigu_app.CustomLayout.InviteFriends>
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="132.26dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="33dp">
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -98,7 +98,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@drawable/text_chat_yamigu_desc"
-                            android:layout_marginTop="13dp"
+                            android:layout_marginTop="4.3dp"
                             android:layout_marginLeft="10dp"/>
                     </LinearLayout>
                 </LinearLayout>
@@ -109,8 +109,8 @@
                 android:layout_width="315dp"
                 android:layout_height="44.33dp"
                 android:background="@drawable/ic_filter_state_kakao"
-                android:layout_gravity="center_horizontal|bottom"
-                android:layout_marginTop="22dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="88dp"
                 android:src="@drawable/btn_kakao_chat_text"
                 >
             </ImageButton>
