--- a/app/src/main/res/layout/invite_friends.xml
+++ b/app/src/main/res/layout/invite_friends.xml
@@ -2,7 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bg"
-    android:layout_height="158.33dp"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
     >
     <RelativeLayout
@@ -30,16 +30,18 @@
                     android:layout_height="wrap_content"
                     android:text="q7tik3"
                     android:textColor="@color/colorBlack"
-                    android:textSize="14dp"/>
+                    android:textSize="14dp"
+                    android:textStyle="bold"/>
             </LinearLayout>
             <ImageView
                 android:layout_width="26dp"
                 android:layout_height="4dp"
                 android:background="@color/colorPoint"
+                android:layout_marginTop="4.3dp"
                 android:layout_marginLeft="19dp"/>
             <LinearLayout
                 android:layout_width="359dp"
-                android:layout_height="109dp"
+                android:layout_height="82.93dp"
                 android:orientation="vertical"
                 android:background="@drawable/profile_card_bg"
                 android:layout_marginTop="4dp"
@@ -48,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/text_invite_freinds_desc"
-                    android:layout_marginTop="13dp"
+                    android:layout_marginTop="4.3dp"
                     android:layout_marginLeft="10dp"/>
             </LinearLayout>
         </LinearLayout>
@@ -60,8 +62,8 @@
         android:layout_width="315dp"
         android:layout_height="44.33dp"
         android:background="@drawable/ic_filter_state_kakao"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginTop="22dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="92dp"
         android:src="@drawable/btn_kakao_share_text"
         >
     </ImageButton>
