--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -4,144 +4,155 @@
     android:id="@+id/bg"
     android:layout_height="221.5dp"
     android:layout_width="359dp"
-    android:background="@drawable/profile_card_bg"
     >
     <FrameLayout
-        android:layout_width="110.5dp"
-        android:layout_height="126dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginLeft="29dp"
-        >
-        <com.yamigu.yamigu_app.CustomLayout.CircularImageView
-            android:id="@+id/iv_profile"
-            android:layout_width="110.5dp"
-            android:layout_height="110.5dp"
-            android:src="@drawable/user_profile_no_img"
-            android:layout_centerVertical="true"/>
-        <ImageButton
-            android:id="@+id/btn_change_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:src="@drawable/btn_change_profile"
-            android:background="@null"
-            />
-    </FrameLayout>
-    <LinearLayout
-        android:layout_width="128dp"
-        android:layout_height="174dp"
-        android:orientation="vertical"
-        android:background="@drawable/profile_card_bg"
-        android:layout_marginTop="12.65dp"
-        android:layout_gravity="right"
-        android:layout_marginRight="51dp"
-        >
-        <TextView
-            android:id="@+id/name_and_age"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="김찬열 (24)"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            android:textSize="25dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="16.2dp">
-        </TextView>
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/button_edit_nickname"
-            android:background="@null"
-            android:layout_marginTop="7dp"/>
-        <TextView
-            android:id="@+id/company"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="연세대학교"
-            android:textColor="#000000"
-            android:textSize="14dp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="15dp">
-        </TextView>
-        <TextView
-            android:id="@+id/department"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="전기전자공학부"
-            android:textColor="#000000"
-            android:textSize="14dp"
-            android:gravity="center_horizontal">
-        </TextView>
-    </LinearLayout>
-    <RelativeLayout
-        android:layout_width="82dp"
-        android:layout_height="25.3dp"
-        android:background="@drawable/label_certificated_ok_bg"
-        android:layout_gravity="right"
-        android:layout_marginRight="8dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="인증 완료"
-            android:textColor="@color/colorPoint"
-            android:textSize="12dp"/>
-    </RelativeLayout>
-    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:layout_gravity="bottom"
-        android:orientation="vertical">
-        <LinearLayout
+        android:layout_height="match_parent">
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_weight="0"
-            android:background="@color/colorNonselect">
+            android:layout_height="209.35dp"
+            android:layout_marginTop="12.15dp"
+            android:background="@drawable/profile_card_bg">
+        <FrameLayout
+            android:layout_width="110.5dp"
+            android:layout_height="126dp"
+            android:layout_marginTop="29dp"
+            android:layout_marginLeft="29dp"
+            >
+            <com.yamigu.yamigu_app.CustomLayout.CircularImageView
+                android:id="@+id/iv_profile"
+                android:layout_width="110.5dp"
+                android:layout_height="110.5dp"
+                android:src="@drawable/user_profile_no_img"
+                android:layout_centerVertical="true"/>
+            <ImageButton
+                android:id="@+id/btn_change_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:src="@drawable/btn_change_profile"
+                android:background="@null"
+                />
+        </FrameLayout>
+        <LinearLayout
+            android:layout_width="128dp"
+            android:layout_height="174dp"
+            android:orientation="vertical"
+            android:background="@drawable/profile_card_bg"
+            android:layout_marginTop="12.65dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="51dp"
+            >
+            <TextView
+                android:id="@+id/name_and_age"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="김찬열 (24)"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="25dp"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="16.2dp">
+            </TextView>
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/button_edit_nickname"
+                android:background="@null"
+                android:layout_marginTop="7dp"/>
+            <TextView
+                android:id="@+id/company"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="연세대학교"
+                android:textColor="#000000"
+                android:textSize="14dp"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp">
+            </TextView>
+            <TextView
+                android:id="@+id/department"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="전기전자공학부"
+                android:textColor="#000000"
+                android:textSize="14dp"
+                android:gravity="center_horizontal">
+            </TextView>
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <FrameLayout
-                android:layout_width="179.25dp"
-                android:layout_height="match_parent">
-                <ImageButton
-                    android:layout_width="179.25dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/icon_notify_big"
-                    android:background="?attr/selectableItemBackground"/>
-                <TextView
-                    android:id="@+id/num_of_notifi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="96.5dp"
-                    android:textSize="18dp"
-                    android:text="0"/>
-            </FrameLayout>
+            android:layout_height="44dp"
+            android:layout_gravity="bottom"
+            android:orientation="vertical">
             <LinearLayout
-                android:layout_width="0.5dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_weight="0"
                 android:background="@color/colorNonselect">
             </LinearLayout>
-            <FrameLayout
-                android:layout_width="179.25dp"
-                android:layout_height="match_parent">
-                <ImageButton
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <FrameLayout
                     android:layout_width="179.25dp"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:layout_width="179.25dp"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/icon_notify_big"
+                        android:background="?attr/selectableItemBackground"/>
+                    <TextView
+                        android:id="@+id/num_of_notifi"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="96.5dp"
+                        android:textSize="18dp"
+                        android:text="0"/>
+                </FrameLayout>
+                <LinearLayout
+                    android:layout_width="0.5dp"
                     android:layout_height="match_parent"
-                    android:src="@drawable/icon_ticket_big"
-                    android:background="?attr/selectableItemBackground"/>
-                <TextView
-                    android:id="@+id/num_of_ticket"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="96.5dp"
-                    android:textSize="18dp"
-                    android:text="0"/>
-            </FrameLayout>
+                    android:background="@color/colorNonselect">
+                </LinearLayout>
+                <FrameLayout
+                    android:layout_width="179.25dp"
+                    android:layout_height="match_parent">
+                    <ImageButton
+                        android:layout_width="179.25dp"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/icon_ticket_big"
+                        android:background="?attr/selectableItemBackground"/>
+                    <TextView
+                        android:id="@+id/num_of_ticket"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="96.5dp"
+                        android:textSize="18dp"
+                        android:text="0"/>
+                </FrameLayout>
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+        </FrameLayout>
+        <RelativeLayout
+            android:layout_width="82dp"
+            android:layout_height="25.3dp"
+            android:background="@drawable/label_certificated_ok_bg"
+            android:layout_gravity="right"
+            android:layout_marginRight="8dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="인증 완료"
+                android:textColor="@color/colorPoint"
+                android:textSize="12dp"/>
+        </RelativeLayout>
+    </FrameLayout>
+
 </FrameLayout>
