--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -50,6 +50,7 @@
                 />
         </RelativeLayout-->
         <com.yamigu.yamigu_app.CustomLayout.ProfileCard
+            android:id="@+id/profile_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -58,6 +59,7 @@
             app:department="전기전자공학부">
         </com.yamigu.yamigu_app.CustomLayout.ProfileCard>
         <com.yamigu.yamigu_app.CustomLayout.InviteFriends
+            android:id="@+id/invite_friend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="33dp"
