--- a/app/src/main/res/layout/activity_meeting_application.xml
+++ b/app/src/main/res/layout/activity_meeting_application.xml
@@ -353,16 +353,47 @@
 
 
         </LinearLayout>
-        <Button
-            android:id="@+id/btn_okay"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="#2B2825"
             android:layout_gravity="bottom"
-            android:text="미팅 신청하기!"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14dp"
-            />
+            android:textSize="14dp">
+            <Button
+                android:id="@+id/btn_okay"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#2B2825"
+                android:text="미팅 신청하기!"
+                android:textColor="@color/colorPrimary"
+                />
+            <LinearLayout
+                android:id="@+id/ll_for_edit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="375"
+                android:orientation="horizontal"
+                android:background="@drawable/rectangle_black_solid">
+                <Button
+                    android:id="@+id/btn_edit"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:background="#2B2825"
+                    android:layout_weight="236"
+                    android:text="미팅 수정하기!"
+                    android:textColor="@color/colorPrimary"
+                    />
+                <Button
+                    android:id="@+id/btn_delete"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="139"
+                    android:text="카드 삭제"
+                    android:textColor="@color/colorRed"
+                    android:background="?attr/selectableItemBackground"/>
+                    />
+            </LinearLayout>
+        </FrameLayout>
+        
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
