--- a/app/src/main/res/layout/meeting_team_wlist.xml
+++ b/app/src/main/res/layout/meeting_team_wlist.xml
@@ -169,7 +169,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_centerInParent="true"
-                    android:gravity="left|center_vertical">
+                    android:gravity="left|center_vertical"
+                    android:scrollbars="none">
                 </WebView>
             </RelativeLayout>
 
