--- a/app/src/main/res/layout/my_meeting_card.xml
+++ b/app/src/main/res/layout/my_meeting_card.xml
@@ -144,6 +144,7 @@
                     android:layout_gravity="center_horizontal"/>
             </LinearLayout>
             <RelativeLayout
+                android:id="@+id/request_panel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@id/right_pane">
@@ -166,6 +167,35 @@
                         android:text="신청팀 보기"
                         android:textColor="@color/colorPoint"
                         android:textSize="16dp"
+                        android:layout_alignParentBottom="true"/>
+                </LinearLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/profile_panel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@id/right_pane"
+                android:visibility="invisible">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
+                    <TextView
+                        android:id="@+id/tv_nickname_and_age"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:textSize="18dp"
+                        android:text="김찬열 (24)"
+                        android:textColor="@color/colorBlack"/>
+                    <TextView
+                        android:id="@+id/tv_belong_and_department"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="연세대학교, 전기전자공학부"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="18dp"
                         android:layout_alignParentBottom="true"/>
                 </LinearLayout>
             </RelativeLayout>
