--- a/app/src/main/res/layout/fragment_received_meeting.xml
+++ b/app/src/main/res/layout/fragment_received_meeting.xml
@@ -14,30 +14,32 @@
             android:layout_width="98dp"
             android:layout_height="65dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="32dp">
+            android:layout_marginTop="47dp">
             <TextView
                 android:id="@+id/tv_num_of_recv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
                 android:textColor="@color/colorBlack"
-                android:textSize="49dp"
-                android:layout_alignParentLeft="true"/>
+                android:textSize="35dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="/"
                 android:textColor="@color/colorNonselect"
-                android:textSize="49dp"
+                android:textSize="35dp"
                 android:layout_centerInParent="true"/>
             <TextView
                 android:id="@+id/tv_total_of_recv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3"
-                android:textSize="49dp"
+                android:textSize="35dp"
                 android:textColor="@color/colorNonselect"
-                android:layout_alignParentRight="true"/>
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"/>
         </RelativeLayout>
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
