--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -88,6 +88,7 @@
                         android:text="야미구와 1:1 대화하기"
                         android:textSize="14dp"
                         android:textColor="@color/colorBlack"
+                        android:fontFamily="@font/nanumgothic_font_family"
                         />
                     <ImageView
                         android:layout_width="26dp"
