rating pane frame created

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="colorTransparent">#00000000</color>
     <color name="colorHint">#C6C6C6</color>
     <color name="colorNormal">#20252C</color>
+    <color name="colorStar">#FFBC4E</color>
 </resources>
