--- a/app/src/main/res/drawable/ic_filter_state_orange.xml
+++ b/app/src/main/res/drawable/ic_filter_state_orange.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#DABD33">
+    android:color="#DC7D3D">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="#DABD33" />
+            <solid android:color="#DC7D3D" />
             <corners
                 android:topLeftRadius="10dp"
                 android:topRightRadius="10dp"
@@ -15,7 +15,7 @@
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <solid
-                android:color="@color/colorKakao"/>
+                android:color="@color/colorPoint"/>
             <corners
                 android:topLeftRadius="10dp"
                 android:topRightRadius="10dp"
