--- a/app/src/main/res/layout/my_meeting_card.xml
+++ b/app/src/main/res/layout/my_meeting_card.xml
@@ -74,7 +74,7 @@
                 <LinearLayout
                     android:id="@+id/btn_edit_card"
                     android:layout_width="wrap_content"
-                    android:layout_height="16dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="17dp"
                     >
