--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -35,33 +35,88 @@
                 />
         </FrameLayout>
         <LinearLayout
-            android:layout_width="128dp"
+            android:layout_width="219.5dp"
             android:layout_height="174dp"
             android:orientation="vertical"
             android:background="@drawable/profile_card_bg"
             android:layout_marginTop="12.65dp"
             android:layout_gravity="right"
-            android:layout_marginRight="51dp"
             >
-            <TextView
-                android:id="@+id/name_and_age"
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="김찬열 (24)"
-                android:textStyle="bold"
-                android:textColor="#000000"
-                android:textSize="25dp"
-                android:gravity="center_horizontal"
                 android:layout_marginTop="16.2dp"
-                android:fontFamily="@font/roboto_font_family">
-            </TextView>
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/button_edit_nickname"
-                android:background="@null"
-                android:layout_marginTop="7dp"/>
+                android:gravity="center_horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center_horizontal">
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="김찬열"
+                        android:textStyle="bold"
+                        android:textColor="#000000"
+                        android:textSize="25dp"
+                        android:gravity="center_vertical"
+                        android:fontFamily="@font/roboto_font_family"
+                        android:padding="0dp"
+                        >
+                    </TextView>
+                    <EditText
+                        android:id="@+id/et_nickname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:hint="김찬열"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorBlack"
+                        android:fontFamily="@font/roboto_font_family"
+                        android:paddingBottom="8dp"
+                        android:textSize="25dp"
+                        android:gravity="bottom"
+                        android:visibility="gone">
+                    </EditText>
+                    <TextView
+                        android:id="@+id/age"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text=" (24)"
+                        android:textStyle="bold"
+                        android:textColor="#000000"
+                        android:textSize="25dp"
+                        android:fontFamily="@font/roboto_font_family"
+                        android:padding="0dp"
+                        android:gravity="center_vertical">
+                    </TextView>
+                </LinearLayout>
+
+            </FrameLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="17dp"
+                android:layout_gravity="center_horizontal">
+                <ImageButton
+                    android:id="@+id/btn_edit_nickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/button_edit_nickname"
+                    android:background="@null"
+                    android:layout_gravity="center_horizontal"
+                    />
+                <TextView
+                    android:id="@+id/tv_available_nickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="사용 가능합니다."
+                    android:textSize="13dp"
+                    android:textColor="@color/colorBlue"
+                    android:visibility="gone"
+                    android:layout_gravity="center_horizontal"
+                    >
+                </TextView>
+            </FrameLayout>
             <TextView
                 android:id="@+id/company"
                 android:layout_width="match_parent"
