--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
     <color name="colorHint">#C6C6C6</color>
     <color name="colorNormal">#20252C</color>
     <color name="colorStar">#FFBC4E</color>
+    <color name="colorBlue">#3129FF</color>
 </resources>
